--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body, html {
   height: 100%;
   font-family: 'Helvetica Neue', sans-serif;
-  background-image: url('/img/eglise_int.jpeg');
+  background-image: url('/img/eglise_int.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
