--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body, html {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  height: 100vh;
 }
 
 header {
