--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -5,6 +5,16 @@
     box-sizing: border-box;
 }
 
+nav {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0;
+  background: rgba(0, 0, 0, 0.4);
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+
 body {
     font-family: 'Georgia', serif;
     line-height: 1.6;
