--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -19,15 +19,17 @@ body {
     font-family: 'Georgia', serif;
     line-height: 1.6;
     color: #333;
-    background-color: #fff;
+    background-color: #000000;
     padding: 40px;
     max-width: 800px;
     margin: 0 auto;
 }
 
-header, footer {
-    text-align: center;
-    margin: 20px 0;
+header {
+  background: url('img/your-background-image.jpg') no-repeat center center/cover;
+  height: 100vh;
+  position: relative;
+  color: white;
 }
 
 /* Styles des images */
