--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -19,14 +19,13 @@ body {
     font-family: 'Georgia', serif;
     line-height: 1.6;
     color: #333;
-    background-color: #000000;
+    background-color: black;
     padding: 40px;
     max-width: 800px;
     margin: 0 auto;
 }
 
 header {
-  background: url('img/your-background-image.jpg') no-repeat center center/cover;
   height: 100vh;
   position: relative;
   color: white;
