--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -19,7 +19,7 @@ body {
     font-family: 'Georgia', serif;
     line-height: 1.6;
     color: #333;
-    background-color: black;
+    background-color: white;
     padding: 40px;
     max-width: 800px;
     margin: 0 auto;
