--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 
-nav {
+nav ul {
   display: flex;
   justify-content: center;
   padding: 20px 0;
@@ -19,7 +19,7 @@ body {
     font-family: 'Georgia', serif;
     line-height: 1.6;
     color: #333;
-    background-color: white;
+    background-color: beige;
     padding: 40px;
     max-width: 800px;
     margin: 0 auto;
