--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -21,15 +21,16 @@ nav ul {
   gap: 30px;
 }
 
-body {
-    font-family: 'Georgia', serif;
-    line-height: 1.6;
-    color: #333;
-    background-color: beige;
-    padding: 40px;
-    max-width: 800px;
-    margin: 0 auto;
+body, html {
+  height: 100%;
+  font-family: 'Helvetica Neue', sans-serif;
+  background-image: url('/img/eglise_int.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
 }
+
 
 header {
   height: 100vh;
