--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -7,7 +7,7 @@ nav {
   display: flex;
   justify-content: center;
   padding: 10px 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: #000;
   z-index: 1000;
 }
 
@@ -30,6 +30,13 @@ body, html {
   font-family: 'Helvetica Neue', sans-serif;
 }
 
+p {
+  line-height: 1.6; /* makes text easier to read */
+  max-width: 800px; /* optional: limit paragraph width for nicer reading */
+  margin: 0 auto;   /* center the paragraphs if they have a max-width */
+  padding: 0 15px;  /* some side padding on small screens */
+}
+
 /* Styles des images */
 .content-image {
     width: 100%;
@@ -49,5 +56,6 @@ body, html {
 .image-section {
   position: relative;
   margin-top: 0;
+  margin: 80px 0;
 }
 
