--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -1,13 +1,10 @@
 /* Reset et styles de base */
 
 nav {
-  position: fixed;
+  position: fixed;         /* stays on top */
   top: 0;
   width: 100%;
-  display: flex;
-  justify-content: center;
-  padding: 30px 0;
-  background: #000;
+  background: #000; /* semi-transparent overlay */
   z-index: 1000;
 }
 
