--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -62,7 +62,7 @@ p {
   margin: 80px 0;
 }
 
-.image-text {
+.image12 {
   display: flex;
   align-items: center;   /* vertical centering */
   gap: 40px;              /* space between image and text */
