--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -29,7 +29,8 @@ nav a {
 }
 
 body, html {
-  margin: 0;
+  margin-top: 0;
+  padding-top: 0;
   font-family: 'Helvetica Neue', sans-serif;
 }
 
@@ -42,6 +43,8 @@ p {
 
 /* Styles des images */
 .content-image {
+    margin-top: 0;
+    padding-top: 0;
     width: 100%;
     height: 100vh;         /* fills the full viewport height */
     object-fit: cover;      /* crops edges to fill without distortion */
@@ -59,7 +62,7 @@ p {
 .image-section {
   position: relative;
   margin-top: 0;
-  margin: 80px 0;
+  padding-top: 0;
 }
 
 .image12 {
