--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -60,8 +60,8 @@ p {
 }
 
 .image-section {
-  margin-top: 0;
-  padding-top: 0;
+  margin: 80px 0;      
+  justify-content: flex-start;
 }
 
 .image12 {
