--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -75,6 +75,7 @@ p {
 }
 
 .image12 .text {
+  text-align: justify;
   flex: 1;  
   display: flex;
   flex-direction: column;  /* stack paragraphs vertically */
