modificqtion sur l affichage du texte a la page notre_eglise

--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -82,6 +82,7 @@ p {
 
 .image12 .text2 {
   margin-left: 20px;
+  margin-rigth: 20px;
   text-align: justify;
   flex: 1;  
   flex-direction: column;  /* stack paragraphs vertically */
