--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -70,7 +70,7 @@ p {
   gap: 40px;
   width: 100%;        /* fill full width */
   max-width: 100%;    
-  overflow-x: hidden;
+  margin : 80px 0;
   padding: 0 20px;        /* optional: side padding on small screens */
 }
 
