--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -69,7 +69,8 @@ p {
   align-items: flex-start;
   gap: 40px;
   width: 100%;        /* fill full width */
-  max-width: 100%;    
+  max-width: 100%;
+  margin-right : 5px;    
   margin : 80px 0;
   padding: 0 20px;        /* optional: side padding on small screens */
 }
