--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -103,7 +103,8 @@ p {
   align-items: flex-start;
   max-width: 100%;
   margin-top : 20px;
-  margin-right : 20px;
+  font-family: "Times New Roman", Times, serif;  
+
 }
 
 footer {
