--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -100,9 +100,9 @@ p {
 }
 
 .image13 {
+  flex-direction: row;
   display : flex;
   font-family: "Times New Roman", Times, serif;  
-
 }
 
 footer {
