--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -39,6 +39,7 @@ h1 {
   color: #000;        /* Changes text color */
   font-size: 36px;       /* Optional: changes font size */
   margin-left: 0;
+  margin-top: 60px;
 }
 /* Styles des images */
 .content-image {
