--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -46,6 +46,7 @@ h1 {
   font-size: 36px;       /* Optional: changes font size */
   margin-left: 0;
   margin-top: 60px;
+  margin-bottom: 10px;
 }
 /* Styles des images */
 .content-image {
