--- a/css/notre_eglise.css
+++ b/css/notre_eglise.css
@@ -35,6 +35,7 @@ body, html {
 }
 
 p { 
+  font-size: 20px;
   line-height: 1.6; /* makes text easier to read */ 
   max-width: 800px; /* optional: limit paragraph width for nicer reading */ 
   margin: 0 auto; /* center the paragraphs if they have a max-width */ 
@@ -46,7 +47,6 @@ h1 {
   font-size: 36px;       /* Optional: changes font size */
   margin-left: 0;
   margin-top: 60px;
-  margin-bottom: 10px;
 }
 /* Styles des images */
 .content-image {
@@ -76,7 +76,7 @@ h1 {
   align-items: flex-start;
   max-width: 100%;
   margin-right : 5px;    
-  margin : 80px 0;
+  margin : 50px 0;
   margin-bottom: 5%;
 }
 
