--- a/css/lecture.css
+++ b/css/lecture.css
@@ -62,7 +62,7 @@ details {
   border: 1px solid #aaa;
   border-radius: 4px;
   padding: 1em 1em 0;
-  background-color: rgba(255, 255, 255, 0.9); /* ensures text is visible */
+  background-color: rgba(255, 255, 255); /* ensures text is visible */
 }
 
 summary {
