--- a/css/lecture.css
+++ b/css/lecture.css
@@ -55,6 +55,7 @@ body {
 }
 
 details {
+  white-space: pre-wrap;
   margin : 20px 5px;
   text-align: center;
   position: relative;   /* creates a stacking context */
