--- a/css/lecture.css
+++ b/css/lecture.css
@@ -15,6 +15,7 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     height: 100vh;
+    scroll-behavior: smooth;
 }
 
 header {
@@ -84,10 +85,10 @@ details[open] summary {
 
 .to-top-btn {
   position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background-color: #333;
-  color: white;
+  bottom: 50px;
+  right: 50px;
+  background-color:white;
+  color: black;
   text-decoration: none;
   padding: 12px 16px;
   border-radius: 50%;
