--- a/css/lecture.css
+++ b/css/lecture.css
@@ -85,14 +85,14 @@ details[open] summary {
 
 .to-top-btn {
   position: fixed;
-  bottom: 50px;
-  right: 50px;
-  background-color:white;
-  color: black;
+  bottom: 20px;
+  right: 20px;
+  background-color:black;
+  color: white;
   text-decoration: none;
   padding: 12px 16px;
   border-radius: 50%;
-  font-size: 18px;
+  font-size: 20px;
   text-align: center;
   z-index: 100;
   transition: opacity 0.3s;
