--- a/css/lecture.css
+++ b/css/lecture.css
@@ -56,7 +56,9 @@ body {
 }
 
 details {
-  white-space: pre-wrap;
+  white-space: pre-wrap;      
+  word-wrap: break-word;      
+  overflow-wrap: break-word; 
   margin : 20px 5px;
   text-align: justify;
   position: relative;   /* creates a stacking context */
