--- a/css/lecture.css
+++ b/css/lecture.css
@@ -22,7 +22,7 @@ header {
     height: auto;           /* remove full viewport height */
     min-height: 100px;      /* optional: keep a minimum height */
     position: relative;
-    background: url('/img/textes_bg.jpg') no-repeat center center/cover;
+    background: url('/img/textes_bg.jpg') repeat;
     color: white;
 }
 
@@ -56,9 +56,10 @@ body {
 }
 
 details {
-  white-space: pre-wrap;      
+  /*white-space: pre-wrap;      
   word-wrap: break-word;      
   overflow-wrap: break-word; 
+  font-family: monospace;*/
   margin : 20px 5px;
   text-align: justify;
   position: relative;   /* creates a stacking context */
