--- a/css/lecture.css
+++ b/css/lecture.css
@@ -55,6 +55,9 @@ nav a {
 }
 body {
     background-color: #000;
+    background: url('/img/textes_bg.jpg') repeat;
+    background-repeat: repeat;
+    background-size: auto;
 }
 
 details {
