--- a/css/lecture.css
+++ b/css/lecture.css
@@ -56,8 +56,7 @@ nav a {
 body {
     background-color: #000;
     background: url('/img/textes_bg.jpg') repeat;
-    background-repeat: repeat;
-    background-size: auto;
+    background-size: cover;
 }
 
 details {
