--- a/css/indexss.css
+++ b/css/indexss.css
@@ -213,7 +213,7 @@ header.loaded .loading-spinner {
   }
 
   .hero-text {
-    padding: 60px 20px 80px;
+    padding: 50% 20px;
   }
 
   .hero-text h1 {
